--- a/index-ar.html
+++ b/index-ar.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ar" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Msarat</title>
-    <!-- bootstrap CDN ltr v5.3  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- bootstrap CDN rtl v5.3  -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.rtl.min.css"
+        integrity="sha384-WJUUqfoMmnfkBLne5uxXj+na/c7sesSJ32gI7GfCk4zO4GthUKhSEGyvQ839BC51" crossorigin="anonymous">
     <!-- font awesome CDN v6.2.1  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -23,7 +23,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
-    <link rel="stylesheet" href="./content/css/main-ltr.css">
+    <link rel="stylesheet" href="./content/css/main-rtl.css">
 
 </head>
 
@@ -32,9 +32,10 @@
     <!-- Start upperbar  -->
     <section class="upperbar bg_main_color py-2 py-lg-0">
         <div class="d-flex justify-content-between align-items-center flex-column flex-lg-row ">
-            <span class="upperbar__text fontf__oswald text-uppercase ms-2">We’re more than just transport. <span
-                    class="text-white fw-bold">Free
-                    Counsultancy</span></span>
+            <span class="upperbar__text fontf__oswald text-uppercase ms-2">نحن أكثر من مجرد وسيلة نقل<span
+                    class="text-white fw-bold"> استشارة
+
+                    مجانية </span></span>
             <ul class="upperbar__icons m-0 p-0 pe-3 d-flex">
                 <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
                 <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
@@ -56,21 +57,21 @@
                     <div class="navbar__box">
                         <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
-                            <p>Call us now</p>
+                            <p>تواصل معنا</p>
                             <a class="fs-6" href="tel:+01022674132">01022674132</a>
                         </div>
                     </div>
                     <div class="navbar__box">
                         <i class="fa-solid fa-envelope-open-text fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
-                            <p>Email now</p>
+                            <p>الأيميل</p>
                             <a class="fs-6" href="mailto:abdelrazekemad123@gmail.com">abdelrazekemad123@gmail.com</a>
                         </div>
                     </div>
                     <div class="navbar__box">
                         <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
-                            <p>address</p>
+                            <p>العنوان</p>
                             <a class="fs-6" href="tel:+01022674132">28st. Msadak</a>
                         </div>
                     </div>
@@ -87,24 +88,24 @@
     <!-- Start Navs -->
     <nav class="descktop-nav bg_red_color d-none d-lg-flex justify-content-between">
         <ul class="navslist m-0 p-0 py-3">
-            <li><a class="text-white" href="./index.html">Home</a></li>
-            <li><a class="text-white" href="./index.html">About us</a></li>
-            <li><a class="text-white" href="./index.html">Contact us</a></li>
-            <li><a class="text-white" href="./index.html">Services</a></li>
-            <li><a class="text-white" href="./index-ar.html">عربي</a></li>
+            <li><a class="text-white" href="./index.html">الصفحة الرئيسية</a></li>
+            <li><a class="text-white" href="./index.html">عن الشركة</a></li>
+            <li><a class="text-white" href="./index.html">تواصل معنا</a></li>
+            <li><a class="text-white" href="./index.html">خدماتنا</a></li>
+            <li><a class="text-white" href="./index.html">English</a></li>
         </ul>
-        <button class="fontf__oswald">get a quote</button>
+        <button class="fontf__oswald">طلب سعر </button>
     </nav>
 
     <div class="mobile-nav__overlay"></div>
     <nav class="mobile-nav">
         <span class="closing_btn"><i class="fa-solid fa-x text-white rounded-circle"></i></span>
         <ul class="mobile-nav__list m-0 p-0 py-2">
-            <a href="./index.html">Home</a>
-            <a href="./index.html">About us</a>
-            <a href="./index.html">Contact us</a>
-            <a href="./index.html">Services</a>
-            <a href="./index-ar.html">عربي</a>
+            <a href="./index.html">الصفحة الرئيسية</a>
+            <a href="./index.html">عن الشركة</a>
+            <a href="./index.html">تواصل معنا</a>
+            <a href="./index.html">خدماتنا</a>
+            <a href="./index.html">English</a>
         </ul>
         <div class="mobile-nav__info">
             <span>
@@ -128,11 +129,11 @@
             <div class="item slider-1 ">
                 <div class="container">
                     <div class="hero__content">
-                        <span class="fontf__oswald fs-4">We work with expertise and professionalism.</span>
-                        <h1>Masarat Al Mina It is<br> your first choice</h1>
+                        <span class="fontf__oswald fs-4">نعمل بخبرة ومهنية</span>
+                        <h1>إختيارك الأول للتخليص الجمركي في أسرع وقت وأقل تكلفة</h1>
                         <div>
-                            <button class="main__btn fontf__oswald bg_red_color"><a href="#">Contact Us</a></button>
-                            <button class="fontf__oswald bordered__btn"><a href="#">Our Services</a></button>
+                            <button class="main__btn fontf__oswald bg_red_color"><a href="#">تواصل معنا</a></button>
+                            <button class="fontf__oswald bordered__btn"><a href="#">خدماتنا</a></button>
                         </div>
                     </div>
                 </div>
@@ -140,11 +141,11 @@
             <div class="item slider-2 ">
                 <div class="container">
                     <div class="hero__content">
-                        <span class="fontf__oswald fs-4">We work with expertise and professionalism.</span>
-                        <h1>Masarat Al Mina It is<br> your first choice</h1>
+                        <span class="fontf__oswald fs-4">نعمل بخبرة ومهنية</span>
+                        <h1>إختيارك الأول للتخليص الجمركي في أسرع وقت وأقل تكلفة</h1>
                         <div>
-                            <button class="main__btn fontf__oswald bg_red_color"><a href="#">Contact Us</a></button>
-                            <button class="fontf__oswald bordered__btn"><a href="#">Our Services</a></button>
+                            <button class="main__btn fontf__oswald bg_red_color"><a href="#">تواصل معنا</a></button>
+                            <button class="fontf__oswald bordered__btn"><a href="#">خدماتنا</a></button>
                         </div>
                     </div>
                 </div>
@@ -152,11 +153,11 @@
             <div class="item slider-3 ">
                 <div class="container">
                     <div class="hero__content">
-                        <span class="fontf__oswald fs-4">We work with expertise and professionalism.</span>
-                        <h1>Masarat Al Mina It is<br> your first choice</h1>
+                        <span class="fontf__oswald fs-4">نعمل بخبرة ومهنية</span>
+                        <h1>إختيارك الأول للتخليص الجمركي في أسرع وقت وأقل تكلفة</h1>
                         <div>
-                            <button class="main__btn fontf__oswald bg_red_color"><a href="#">Contact Us</a></button>
-                            <button class="fontf__oswald bordered__btn"><a href="#">Our Services</a></button>
+                            <button class="main__btn fontf__oswald bg_red_color"><a href="#">تواصل معنا</a></button>
+                            <button class="fontf__oswald bordered__btn"><a href="#">خدماتنا</a></button>
                         </div>
                     </div>
                 </div>
@@ -176,7 +177,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./content/js/owl.carousel.-ltr.js"></script>
+    <script src="./content/js/owl.carousel.-rtl.js"></script>
     <script src="./content/js/main.js"></script>
 </body>
 
