--- a/index-ar.html
+++ b/index-ar.html
@@ -21,8 +21,6 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
     <link rel="stylesheet" href="./content/css/main-rtl.css">
 
 </head>
@@ -34,7 +32,6 @@
         <div class="d-flex justify-content-between align-items-center flex-column flex-lg-row ">
             <span class="upperbar__text fontf__oswald text-uppercase ms-2">نحن أكثر من مجرد وسيلة نقل<span
                     class="text-white fw-bold"> استشارة
-
                     مجانية </span></span>
             <ul class="upperbar__icons m-0 p-0 pe-3 d-flex">
                 <li class="bg_red_color d-block p-2 text-white"><i class="fa-brands fa-facebook"></i></li>
@@ -164,6 +161,42 @@
             </div>
         </div>
     </section>
+
+    <!-- Start Services  -->
+    <div class="container">
+        <div class="services-section">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+                <div class="col">
+                    <div class="services__card">
+                        <div class="sercices__icon"><img width="60" src="./content/assets/img/services-section/boat.webp"
+                                alt=""></div>
+                        <h3><a class="text_main_color" href="#">منافذ بحرية</a></h3>
+                        <p class="text-color">نوفر خدماتنا لتشمل أكثر من منفذ بحري في مختلف بقاع المملكة</p>
+                        <a class="text_main_color" href="#">تفاصيل الخدمة</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="services__card">
+                        <div class="sercices__icon"><img width="60"
+                                src="./content/assets/img/services-section/frontal-truck.webp" alt=""></div>
+                        <h3><a class="text_main_color" href="#">منافذ برية</a></h3>
+                        <p class="text-color">نوفر خدماتنا لتشمل أكثر من منفذ بري في مختلف بقاع المملكة</p>
+                        <a class="text_main_color" href="#">تفاصيل الخدمة</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="services__card">
+                        <div class="sercices__icon"><img width="60"
+                                src="./content/assets/img/services-section/plane.webp" alt=""></div>
+                        <h3><a class="text_main_color" href="#">منافذ جوية</a></h3>
+                        <p class="text-color">نوفر خدماتنا لتشمل أكثر من منفذ جوي في مختلف بقاع المملكة</p>
+                        <a class="text_main_color" href="#">تفاصيل الخدمة</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
