--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="navbar__box">
                         <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
-                            <p>Call us now</p>
+                            <p class="text-color">Call us now</p>
                             <a class="fs-6" href="tel:+01022674132">01022674132</a>
                         </div>
                     </div>
@@ -131,7 +131,8 @@
                         <span class="fontf__oswald fs-4">We work with expertise and professionalism.</span>
                         <h1>Masarat Al Mina It is<br> your first choice</h1>
                         <div>
-                            <button class="main__btn fontf__oswald bg_red_color"><a href="#">Contact Us</a></button>
+                            <button class="main__btn fontf__oswald bg_red_color"><a class="text_main_color"
+                                    href="#">Contact Us</a></button>
                             <button class="fontf__oswald bordered__btn"><a href="#">Our Services</a></button>
                         </div>
                     </div>
@@ -164,6 +165,40 @@
         </div>
     </section>
 
+    <!-- Start Services  -->
+    <div class="container">
+        <div class="services-section">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+                <div class="col">
+                    <div class="services__card">
+                        <div class="sercices__icon"><img width="60" src="./content/assets/img/services-section/boat.webp"
+                                alt=""></div>
+                        <h3><a class="text_main_color" href="#">OCEAN <br> TRANSPORT</a></h3>
+                        <p class="text-color">The quality data, best network building uptime, fastest output</p>
+                        <a class="text_main_color" href="#">SERVICE DETAILS</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="services__card">
+                        <div class="sercices__icon"><img width="60"
+                                src="./content/assets/img/services-section/frontal-truck.webp" alt=""></div>
+                        <h3><a class="text_main_color" href="#">ROAD <br> TRANSPORT</a></h3>
+                        <p class="text-color">The quality data, best network building uptime, fastest output</p>
+                        <a class="text_main_color" href="#">SERVICE DETAILS</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="services__card">
+                        <div class="sercices__icon"><img width="60"
+                                src="./content/assets/img/services-section/plane.webp" alt=""></div>
+                        <h3><a class="text_main_color" href="#">AIRWAYS <br> TRANSPORT</a></h3>
+                        <p class="text-color">The quality data, best network building uptime, fastest output</p>
+                        <a class="text_main_color" href="#">SERVICE DETAILS</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
