--- a/index-ar.html
+++ b/index-ar.html
@@ -127,7 +127,7 @@
                 <div class="container">
                     <div class="hero__content">
                         <span class="fontf__oswald fs-4">نعمل بخبرة ومهنية</span>
-                        <h1>إختيارك الأول للتخليص الجمركي في أسرع وقت وأقل تكلفة</h1>
+                        <h1>اختيارك الاول للتخليص الجمركي في اسرع وقت وأقل تكلفة</h1>
                         <div>
                             <button class="main__btn fontf__oswald bg_red_color"><a href="#">تواصل معنا</a></button>
                             <button class="fontf__oswald bordered__btn"><a href="#">خدماتنا</a></button>
@@ -139,7 +139,7 @@
                 <div class="container">
                     <div class="hero__content">
                         <span class="fontf__oswald fs-4">نعمل بخبرة ومهنية</span>
-                        <h1>إختيارك الأول للتخليص الجمركي في أسرع وقت وأقل تكلفة</h1>
+                        <h1>اختيارك الاول للتخليص الجمركي في اسرع وقت وأقل تكلفة</h1>
                         <div>
                             <button class="main__btn fontf__oswald bg_red_color"><a href="#">تواصل معنا</a></button>
                             <button class="fontf__oswald bordered__btn"><a href="#">خدماتنا</a></button>
@@ -151,7 +151,7 @@
                 <div class="container">
                     <div class="hero__content">
                         <span class="fontf__oswald fs-4">نعمل بخبرة ومهنية</span>
-                        <h1>إختيارك الأول للتخليص الجمركي في أسرع وقت وأقل تكلفة</h1>
+                        <h1>اختيارك الاول للتخليص الجمركي في اسرع وقت وأقل تكلفة</h1>
                         <div>
                             <button class="main__btn fontf__oswald bg_red_color"><a href="#">تواصل معنا</a></button>
                             <button class="fontf__oswald bordered__btn"><a href="#">خدماتنا</a></button>
@@ -162,14 +162,14 @@
         </div>
     </section>
 
-    <!-- Start Services  -->
+    <!-- Start Services section  -->
     <div class="container">
         <div class="services-section">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
                 <div class="col">
                     <div class="services__card">
-                        <div class="sercices__icon"><img width="60" src="./content/assets/img/services-section/boat.webp"
-                                alt=""></div>
+                        <div class="sercices__icon"><img width="60"
+                                src="./content/assets/img/services-section/boat.webp" alt=""></div>
                         <h3><a class="text_main_color" href="#">منافذ بحرية</a></h3>
                         <p class="text-color">نوفر خدماتنا لتشمل أكثر من منفذ بحري في مختلف بقاع المملكة</p>
                         <a class="text_main_color" href="#">تفاصيل الخدمة</a>
@@ -196,6 +196,77 @@
             </div>
         </div>
     </div>
+
+    <!-- Start About Section  -->
+    <section class="about-section py-5 m">
+        <div class="container">
+            <div class="row ">
+                <div class="col-12 col-lg-6">
+                    <img class="img-fluid" src="./content/assets/img/About-section/about-img.webp" alt="">
+                </div>
+                <div class="col-12 col-lg-6 px-5 mt-lg-0 mt-5">
+                    <span class="text_red_color fw-bold">نبذه عننا</span>
+                    <h2 class="text_main_color fs-1 mb-4">إختيارك الأول للتخليص الجمركي</h2>
+                    <p class="text-color">بمهنية وحرفية تعدت العشرين عام من الخبرة أصبحت (مسارات الميناء) للتخليص
+                        الجمركي من رواد الشركات المتخصصة في كافة الأمور الخاصة بالمجال الجمركي لدرايتنا الكالمىة
+                        بمصطلحات الشحن والتخليص الجمركي واللوائح والقوانين التي تنظم عمليات التصدير والإستيراد
+                    </p>
+                    <button class="main__btn fontf__oswald bg_red_color"><a class="text_main_color" href="#">تعرف علي
+                            المزيد</a></button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Start info section -->
+    <div class="container my-5">
+        <section class="info_section">
+            <div class="row flex-column flex-lg-row text-center">
+                <div class="col">
+                    <h3>اطلب خدماتنا الأن</h3>
+                </div>
+                <div class="col-2">
+                    <div class="info_icon"><i class="fa-solid fa-phone-volume"></i></div>
+                </div>
+                <div class="col">
+                    <h3>تواصل معنا الأن <a href="tel:0504333360">0504333360</>
+                    </h3>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <!-- Start principles Section  -->
+    <section class="principles py-5 m">
+        <div class="container">
+            <div class="row ">
+                <div class="col-12 col-lg-6 px-5 mt-lg-0 mt-5">
+                    <span class="text_red_color fw-bold">مبادئنا</span>
+                    <h2 class="text_main_color mb-4">نعمل وفق مبادئ ومعايير محددة لضمان تقديم أفضل خدمة لعملائنا</h2>
+                    <ul>
+                        <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>01</span>النزاهة والشفافية</li>
+                        <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>02</span>المصداقية</li>
+                        <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>03</span>سرعة الإنجاز</li>
+                        <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>04</span>خبرة لسنوات</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-lg-6 principles__vid">
+                    <img class="img-fluid" src="./content/assets/img/principles/work-img.webp" alt="">
+                    <div class="video__icon">
+                        <i class="fa-solid fa-play fs-3 text_main_color"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="vid__modle">
+            <iframe width="800" height="400" src="https://www.youtube.com/embed/VX5rjTramis"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <span class="closing_btn-vid"><i class="fa-solid fa-xmark"></i></span>
+
+        </div>
+    </section>
 
 
 
