--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
         </div>
     </section>
 
-    <!-- Start Services  -->
+    <!-- Start Services section  -->
     <div class="container">
         <div class="services-section">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
                 <div class="col">
                     <div class="services__card">
-                        <div class="sercices__icon"><img width="60" src="./content/assets/img/services-section/boat.webp"
-                                alt=""></div>
+                        <div class="sercices__icon"><img width="60"
+                                src="./content/assets/img/services-section/boat.webp" alt=""></div>
                         <h3><a class="text_main_color" href="#">OCEAN <br> TRANSPORT</a></h3>
                         <p class="text-color">The quality data, best network building uptime, fastest output</p>
                         <a class="text_main_color" href="#">SERVICE DETAILS</a>
@@ -199,6 +199,84 @@
             </div>
         </div>
     </div>
+
+
+    <!-- Start About Section  -->
+    <section class="about-section py-5 m">
+        <div class="container">
+            <div class="row ">
+                <div class="col-12 col-lg-6">
+                    <img class="img-fluid" src="./content/assets/img/About-section/about-img.webp" alt="">
+                </div>
+                <div class="col-12 col-lg-6 px-5 mt-lg-0 mt-5">
+                    <span class="text_red_color fw-bold">About Us</span>
+                    <h2 class="text_main_color fs-1 mb-4">Masarat Al Mina It is your first choice</h2>
+                    <p class="text-color">With professionalism and craftsmanship that exceeded twenty years of
+                        experience, (Masarat
+                        Al-Mina) for customs clearance has become one of the pioneers of companies</p>
+                    <p class="text-color">specialized in all
+                        matters related to the customs field due to our verbal knowledge of shipping terms, customs
+                        clearance, regulations, and laws that regulate the export and import operations</p>
+                    <button class="main__btn fontf__oswald bg_red_color"><a class="text_main_color" href="#">Learn
+                            More</a></button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Start info section -->
+    <div class="container mt-5">
+        <section class="info_section">
+            <div class="row flex-column flex-lg-row text-center">
+                <div class="col">
+                    <h3>Request our services now</h3>
+                </div>
+                <div class="col-2">
+                    <div class="info_icon"><i class="fa-solid fa-phone-volume"></i></div>
+                </div>
+                <div class="col">
+                    <h3>CALL US ON <a href="tel:0504333360">0504333360</a></h3>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <!-- Start principles Section  -->
+    <section class="principles py-5 m">
+        <div class="container">
+            <div class="row ">
+                <div class="col-12 col-lg-6 px-5 mt-lg-0 mt-5">
+                    <span class="text_red_color fw-bold">Our principles</span>
+                    <h2 class="text_main_color mb-4">We work according to specific regulations and standards to
+                        ensure that we provide the best service to our customers</h2>
+                    <ul>
+                        <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>01</span> Integrity and transparency</li>
+                        <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>02</span> credibility</li>
+                        <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>03</span> Speed ​​up the work</li>
+                        <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>04</span> experience for years</li>
+                    </ul>
+                    <button class="main__btn fontf__oswald bg_red_color"><a class="text_main_color" href="#">Learn
+                            More</a></button>
+                </div>
+                <div class="col-12 col-lg-6 principles__vid">
+                    <img class="img-fluid" src="./content/assets/img/principles/work-img.webp" alt="">
+                    <div class="video__icon">
+                        <i class="fa-solid fa-play fs-3 text_main_color"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="vid__modle">
+            <iframe width="800" height="400" src="https://www.youtube.com/embed/VX5rjTramis"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <span class="closing_btn-vid"><i class="fa-solid fa-xmark"></i></span>
+
+        </div>
+    </section>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
