--- a/index-ar.html
+++ b/index-ar.html
@@ -229,8 +229,7 @@
                     <div class="info_icon"><i class="fa-solid fa-phone-volume"></i></div>
                 </div>
                 <div class="col">
-                    <h3>تواصل معنا الأن <a href="tel:0504333360">0504333360</>
-                    </h3>
+                    <h3>تواصل معنا الأن <a href="tel:0504333360">0504333360</a></h3>
                 </div>
             </div>
         </section>
@@ -239,7 +238,7 @@
     <!-- Start principles Section  -->
     <section class="principles py-5 m">
         <div class="container">
-            <div class="row ">
+            <div class="row">
                 <div class="col-12 col-lg-6 px-5 mt-lg-0 mt-5">
                     <span class="text_red_color fw-bold">مبادئنا</span>
                     <h2 class="text_main_color mb-4">نعمل وفق مبادئ ومعايير محددة لضمان تقديم أفضل خدمة لعملائنا</h2>
@@ -264,7 +263,52 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
             <span class="closing_btn-vid"><i class="fa-solid fa-xmark"></i></span>
+        </div>
+    </section>
 
+    <!-- Start Request A quote  -->
+    <section class="quote">
+        <div class="container">
+            <div class="row justify-content-end">
+                <div class="col-8">
+                    <div class="quote__content bg-white">
+                        <span class="text_red_color fw-bold">دعوة للعمل</span>
+                        <h2 class="text_main_color mb-4">طلب خدمة</h2>
+                        <form class="quote__form">
+                            <div class="row">
+                                <div class="col">
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control quote__form__input fontf__oswald fw-bold"
+                                            placeholder="Name" aria-label="Name" aria-describedby="basic-addon1">
+                                        <span class="input-group-text" id="basic-addon1"><i
+                                                class="fa-solid fa-user"></i></span>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control quote__form__input fontf__oswald fw-bold"
+                                            placeholder="Subject" aria-label="Subject" aria-describedby="basic-addon1">
+                                        <span class="input-group-text" id="basic-addon2"><i
+                                                class="fa-solid fa-i-cursor"></i></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <div class="mb-3">
+                                        <label for="exampleFormControlTextarea1"
+                                            class="form-label fontf__oswald fw-bold">Message</label>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1"
+                                            rows="3"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="submit"
+                                class="main__btn fontf__oswald bg_red_color text-white mb-5">Send</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
