--- a/index.html
+++ b/index.html
@@ -250,13 +250,12 @@
                     <h2 class="text_main_color mb-4">We work according to specific regulations and standards to
                         ensure that we provide the best service to our customers</h2>
                     <ul>
-                        <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>01</span> Integrity and transparency</li>
+                        <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>01</span> Integrity and transparency
+                        </li>
                         <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>02</span> credibility</li>
                         <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>03</span> Speed ​​up the work</li>
                         <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>04</span> experience for years</li>
                     </ul>
-                    <button class="main__btn fontf__oswald bg_red_color"><a class="text_main_color" href="#">Learn
-                            More</a></button>
                 </div>
                 <div class="col-12 col-lg-6 principles__vid">
                     <img class="img-fluid" src="./content/assets/img/principles/work-img.webp" alt="">
@@ -276,6 +275,51 @@
         </div>
     </section>
 
+    <!-- Start Request A quote  -->
+    <section class="quote">
+        <div class="container">
+            <div class="row justify-content-end">
+                <div class="col-8">
+                    <div class="quote__content bg-white">
+                        <span class="text_red_color fw-bold">CALL TO ACTION</span>
+                        <h2 class="text_main_color mb-4">REQUEST A FREE QUOTE</h2>
+                        <form class="quote__form">
+                            <div class="row">
+                                <div class="col">
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control quote__form__input fontf__oswald fw-bold"
+                                            placeholder="Name" aria-label="Name" aria-describedby="basic-addon1">
+                                        <span class="input-group-text" id="basic-addon1"><i
+                                                class="fa-solid fa-user"></i></span>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control quote__form__input fontf__oswald fw-bold"
+                                            placeholder="Subject" aria-label="Subject" aria-describedby="basic-addon1">
+                                        <span class="input-group-text" id="basic-addon2"><i
+                                                class="fa-solid fa-i-cursor"></i></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <div class="mb-3">
+                                        <label for="exampleFormControlTextarea1"
+                                            class="form-label fontf__oswald fw-bold">Message</label>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1"
+                                            rows="3"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="submit"
+                                class="main__btn fontf__oswald bg_red_color text-white mb-5">Send</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
