Numbers En & Ar

--- a/index-ar.html
+++ b/index-ar.html
@@ -267,15 +267,15 @@
     </section>
 
     <!-- Start Request A quote  -->
-    <section class="quote">
+    <section class="quote mb-5">
         <div class="container">
             <div class="row justify-content-end">
-                <div class="col-8">
+                <div class="col-12 col-md-8 col-lg-8">
                     <div class="quote__content bg-white">
                         <span class="text_red_color fw-bold">دعوة للعمل</span>
                         <h2 class="text_main_color mb-4">طلب خدمة</h2>
                         <form class="quote__form">
-                            <div class="row">
+                            <div class="row row-cols-1 row-cols-md-2">
                                 <div class="col">
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control quote__form__input fontf__oswald fw-bold"
@@ -307,6 +307,35 @@
                                 class="main__btn fontf__oswald bg_red_color text-white mb-5">Send</button>
                         </form>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Start Numbers  -->
+    <section class="numbers mt-5">
+        <div class="container">
+            <div class="row text-center row-cols-1 row-cols-md-2 row-cols-lg-3">
+                <div class="col">
+                    <div class="numbers__icon">
+                        <i class="fa-solid fa-users"></i>
+                    </div>
+                    <span>1000</span>
+                    <h5>عميل</h5>
+                </div>
+                <div class="col">
+                    <div class="numbers__icon">
+                        <i class="fa-solid fa-user-tie"></i>
+                    </div>
+                    <span>500</span>
+                    <h5>موظف محترف</h5>
+                </div>
+                <div class="col">
+                    <div class="numbers__icon">
+                        <i class="fa-solid fa-cubes"></i>
+                    </div>
+                    <span>1000</span>
+                    <h5>مخالصة جمركية</h5>
                 </div>
             </div>
         </div>
