--- a/index.html
+++ b/index.html
@@ -276,15 +276,15 @@
     </section>
 
     <!-- Start Request A quote  -->
-    <section class="quote">
+    <section class="quote mb-5">
         <div class="container">
             <div class="row justify-content-end">
-                <div class="col-8">
+                <div class="col-12 col-md-8 col-lg-8">
                     <div class="quote__content bg-white">
                         <span class="text_red_color fw-bold">CALL TO ACTION</span>
                         <h2 class="text_main_color mb-4">REQUEST A FREE QUOTE</h2>
                         <form class="quote__form">
-                            <div class="row">
+                            <div class="row row-cols-1 row-cols-md-2">
                                 <div class="col">
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control quote__form__input fontf__oswald fw-bold"
@@ -321,6 +321,34 @@
         </div>
     </section>
 
+    <!-- Start Numbers  -->
+    <section class="numbers mt-5">
+        <div class="container">
+            <div class="row text-center row-cols-1 row-cols-md-2 row-cols-lg-3">
+                <div class="col">
+                    <div class="numbers__icon">
+                        <i class="fa-solid fa-users"></i>
+                    </div>
+                    <span>1000</span>
+                    <h5>customers</h5>
+                </div>
+                <div class="col">
+                    <div class="numbers__icon">
+                        <i class="fa-solid fa-user-tie"></i>
+                    </div>
+                    <span>500</span>
+                    <h5>Professional Staff</h5>
+                </div>
+                <div class="col">
+                    <div class="numbers__icon">
+                        <i class="fa-solid fa-cubes"></i>
+                    </div>
+                    <span>1000</span>
+                    <h5>Customs Clearance</h5>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
