--- a/index.html
+++ b/index.html
@@ -350,6 +350,50 @@
         </div>
     </section>
 
+    <!-- Start Footer -->
+    <footer class="bg_main_color text-white pt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>Masarat Al Mina</h2>
+                    <p class="text-color">for customs clearance to clear all outstanding customs matters flexibly and
+                        easily, helping you
+                        save time and effort as well as money</p>
+                </div>
+                <div class="col">
+                    <h2>Links:</h2>
+                    <ul>
+                        <li><a class="text-color" href="./index.html">Home</a></li>
+                        <li><a class="text-color" href="./index.html">About us</a></li>
+                        <li><a class="text-color" href="./index.html">Contact us</a></li>
+                        <li><a class="text-color" href="./index.html">Services</a></li>
+                    </ul>
+                </div>
+                <div class="col-6">
+                    <h2>Contact us now:</h2>
+                    <ul>
+                        <li>Contact: <p class="text-color">0504333360</p>
+                        </li>
+                        <li>Address: <p class="text-color">Masarat Al Mina Corporation for Customs Clearance -
+                                Riyadh -
+                                Al-Malaz District -
+                                Street: Salah Al-Din Al-Ayyubi Road</p>
+                        </li>
+                        <li>Email:
+                            <p class="text-color">abdelrazekemad123@gmail.com</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Start Copy Right  -->
+    <section class="bg_red_color text-white d-flex justify-content-center align-items-center py-3">
+        <span>&copy; You deserve the best from <a class="text_main_color" href="https://www.ocoda.com/" target="_blank">Ocoda</a></span>
+    </section>
+    <!-- End Copy Right  -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
