--- a/index-ar.html
+++ b/index-ar.html
@@ -279,7 +279,7 @@
                                 <div class="col">
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control quote__form__input fontf__oswald fw-bold"
-                                            placeholder="Name" aria-label="Name" aria-describedby="basic-addon1">
+                                            placeholder="الاسم" aria-label="Name" aria-describedby="basic-addon1">
                                         <span class="input-group-text" id="basic-addon1"><i
                                                 class="fa-solid fa-user"></i></span>
                                     </div>
@@ -287,7 +287,7 @@
                                 <div class="col">
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control quote__form__input fontf__oswald fw-bold"
-                                            placeholder="Subject" aria-label="Subject" aria-describedby="basic-addon1">
+                                            placeholder="الموضوع" aria-label="Subject" aria-describedby="basic-addon1">
                                         <span class="input-group-text" id="basic-addon2"><i
                                                 class="fa-solid fa-i-cursor"></i></span>
                                     </div>
@@ -297,14 +297,14 @@
                                 <div class="col">
                                     <div class="mb-3">
                                         <label for="exampleFormControlTextarea1"
-                                            class="form-label fontf__oswald fw-bold">Message</label>
+                                            class="form-label fontf__oswald fw-bold">الرسالة</label>
                                         <textarea class="form-control" id="exampleFormControlTextarea1"
                                             rows="3"></textarea>
                                     </div>
                                 </div>
                             </div>
                             <button type="submit"
-                                class="main__btn fontf__oswald bg_red_color text-white mb-5">Send</button>
+                                class="main__btn fontf__oswald bg_red_color text-white mb-5">إرسال</button>
                         </form>
                     </div>
                 </div>
@@ -341,6 +341,48 @@
         </div>
     </section>
 
+    <!-- Start Footer -->
+    <footer class="bg_main_color text-white pt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>مسارات الميناء</h2>
+                    <p class="text-color">للتخليص الجمركي لتخليص كافة الأمور المعلقة بالجمارك بمرونة وسهولة، مما يساعدك
+                        في توفير الوقت والجهد وكذلك الأموال
+                    </p>
+                </div>
+                <div class="col">
+                    <h2>روابط هامة:</h2>
+                    <ul>
+                        <li><a class="text-color" href="./index.html">الصفحة الرئيسية</a></li>
+                        <li><a class="text-color" href="./index.html">عن الشركة</a></li>
+                        <li><a class="text-color" href="./index.html">تواصل معنا</a></li>
+                        <li><a class="text-color" href="./index.html">خدماتنا</a></li>
+                    </ul>
+                </div>
+                <div class="col-6">
+                    <h2>تواصل معنا الان:</h2>
+                    <ul>
+                        <li>رقم الجوال: <p class="text-color">0504333360</p>
+                        </li>
+                        <li>العنوان: <p class="text-color">مؤسسة مسارات الميناء للتخليص الجمركي- الرياض- حي الملز
+                                -الشارع :طريق صلاح الدين الايوبي</p>
+                        </li>
+                        <li>الايميل:
+                            <p class="text-color">abdelrazekemad123@gmail.com</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Start Copy Right  -->
+    <section class="bg_red_color text-white d-flex justify-content-center align-items-center py-3">
+        <span>&copy; انت تستحق الافصل من <a class="text_main_color" href="https://www.ocoda.com/"
+                target="_blank">Ocoda</a></span>
+    </section>
+    <!-- End Copy Right  -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
