testimonials En & Ar

--- a/index-ar.html
+++ b/index-ar.html
@@ -266,6 +266,84 @@
         </div>
     </section>
 
+    <!-- Start testimonials -->
+    <section class="testimonials py-5">
+        <div class="container d-flex justify-content-center align-items-center flex-column">
+            <span class="text_red_color fw-bold">الإراء</span>
+            <h2 class="text_main_color fs-1 mb-4">أراء عملائنا</h2>
+            <div class="owl-carousel-testimonials owl-carousel owl-theme">
+                <div class="item">
+                    <div class="testimonials__card">
+                        <div class="testimonials__stars text_red_color">
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i>
+                        </div>
+                        <p class="text-color">“سررت بالتعامل معهم شركة محترفة انتهوا من كل الأوراق الخاص بالتخليص
+                            الجمركي تبعي في وقت سريع”</p>
+                        <div class="testimonials__card__user d-flex align-items-center justify-content-evenly">
+                            <div class="user__icon d-flex">
+                                <img class="img-fluid" src="./content/assets/img/testimonials/auth-1.png" alt="">
+                            </div>
+                            <h6 class="user__name text_main_color">ياسر المقداد</h6>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="testimonials__card">
+                        <div class="testimonials__stars text_red_color">
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i>
+                        </div>
+                        <p class="text-color">“اكثر شركة تخليص جمركي سريعة ومنجزة حقيقي راح يكون بنا تعاملات كثيرة”</p>
+                        <div class="testimonials__card__user d-flex align-items-center justify-content-evenly">
+                            <div class="user__icon d-flex">
+                                <img class="img-fluid" src="./content/assets/img/testimonials/auth-1.png" alt="">
+                            </div>
+                            <h6 class="user__name text_main_color">نجوى رابح</h6>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="testimonials__card">
+                        <div class="testimonials__stars text_red_color">
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i>
+                        </div>
+                        <p class="text-color">“كان يواجهني عوائق كثيرة لإخراج شحنتي فأستعنت بمسارات الميناء وانهوا لي كل
+                            شئ بسهولة وفي وقت قصير”</p>
+                        <div class="testimonials__card__user d-flex align-items-center justify-content-evenly">
+                            <div class="user__icon d-flex">
+                                <img class="img-fluid" src="./content/assets/img/testimonials/auth-1.png" alt="">
+                            </div>
+                            <h6 class="user__name text_main_color">سعد قطامش</h6>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="testimonials__card">
+                        <div class="testimonials__stars text_red_color">
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i>
+                        </div>
+                        <p class="text-color">“ما في أحسن منهم لحل كل المشاكل الجمركية وبأقل تكلفة”</p>
+                        <div class="testimonials__card__user d-flex align-items-center justify-content-evenly">
+                            <div class="user__icon d-flex">
+                                <img class="img-fluid" src="./content/assets/img/testimonials/auth-1.png" alt="">
+                            </div>
+                            <h6 class="user__name text_main_color">احمد الريان</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+
     <!-- Start Request A quote  -->
     <section class="quote mb-5">
         <div class="container">
