--- a/index.html
+++ b/index.html
@@ -275,6 +275,83 @@
         </div>
     </section>
 
+    <!-- Start testimonials -->
+    <section class="testimonials py-5">
+        <div class="container d-flex justify-content-center align-items-center flex-column">
+            <span class="text_red_color fw-bold">testimonials</span>
+            <h2 class="text_main_color fs-1 mb-4">USER FEEDBACKS</h2>
+            <div class="owl-carousel-testimonials owl-carousel owl-theme">
+                <div class="item">
+                    <div class="testimonials__card">
+                        <div class="testimonials__stars text_red_color">
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i>
+                        </div>
+                        <p class="text-color">“I would recommend them to anyone who has a trade and imports products
+                            because they are professionals in customs clearance.”</p>
+                        <div class="testimonials__card__user d-flex align-items-center justify-content-evenly">
+                            <div class="user__icon d-flex">
+                                <img class="img-fluid" src="./content/assets/img/testimonials/auth-1.png" alt="">
+                            </div>
+                            <h6 class="user__name text_main_color">Nayef Abdullah</h6>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="testimonials__card">
+                        <div class="testimonials__stars text_red_color">
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i>
+                        </div>
+                        <p class="text-color">“The best marine customs clearance companies”</p>
+                        <div class="testimonials__card__user d-flex align-items-center justify-content-evenly">
+                            <div class="user__icon d-flex">
+                                <img class="img-fluid" src="./content/assets/img/testimonials/auth-1.png" alt="">
+                            </div>
+                            <h6 class="user__name text_main_color">Salem Ahmed</h6>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="testimonials__card">
+                        <div class="testimonials__stars text_red_color">
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i>
+                        </div>
+                        <p class="text-color">“A place that combines speed, low cost and professionalism”</p>
+                        <div class="testimonials__card__user d-flex align-items-center justify-content-evenly">
+                            <div class="user__icon d-flex">
+                                <img class="img-fluid" src="./content/assets/img/testimonials/auth-1.png" alt="">
+                            </div>
+                            <h6 class="user__name text_main_color">Saleh Al-Ahmad</h6>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="testimonials__card">
+                        <div class="testimonials__stars text_red_color">
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i>
+                        </div>
+                        <p class="text-color">“They are very professional in their dealings and customer service”</p>
+                        <div class="testimonials__card__user d-flex align-items-center justify-content-evenly">
+                            <div class="user__icon d-flex">
+                                <img class="img-fluid" src="./content/assets/img/testimonials/auth-1.png" alt="">
+                            </div>
+                            <h6 class="user__name text_main_color">Fawaz Al-Otaibi</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+
     <!-- Start Request A quote  -->
     <section class="quote mb-5">
         <div class="container">
@@ -390,7 +467,8 @@
 
     <!-- Start Copy Right  -->
     <section class="bg_red_color text-white d-flex justify-content-center align-items-center py-3">
-        <span>&copy; You deserve the best from <a class="text_main_color" href="https://www.ocoda.com/" target="_blank">Ocoda</a></span>
+        <span>&copy; You deserve the best from <a class="text_main_color" href="https://www.ocoda.com/"
+                target="_blank">Ocoda</a></span>
     </section>
     <!-- End Copy Right  -->
 
